--- a/public/css/global_custom.css
+++ b/public/css/global_custom.css
@@ -1,3 +1,15 @@
-body {
+body  {
   color: #1d2939;
+}
+
+.form-body {
+  color: #000000;
+}
+
+input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], textarea, select {
+    border: 1px solid #ddd;
+    border-radius: 0;
+    box-shadow: none !important;
+    color: #000000 !important;
+    font-size: 13px !important;
 }
