--- a/public/css/global_custom.css
+++ b/public/css/global_custom.css
@@ -13,3 +13,7 @@ input[type="text"], input[type="password"], input[type="datetime"], input[type="
     color: #000000 !important;
     font-size: 13px !important;
 }
+
+.chosen-container-single .chosen-single {
+    color: #000000 !important;
+}
